--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     font-size: 20px;
     
 }
+
 .h_second{
     font-size: 50px;
 }
@@ -208,7 +209,8 @@
     background-color: grey;
 }
 .blog_right{
-    width: 650px;
+    width: 670px;
+    text-transform: capitalize;
 }
 
 .blog_right_div{
@@ -218,14 +220,79 @@
     text-align: center;
     margin: 12px;
     line-height: 2;
-    color:orange;
+    color: #f39f06;
     font-weight:bold;
     font-size: 25px;
 }
 .blog_line{
-    display: flex;  
-    border-bottom: 1px solid gray;
+    display: flex;
+    border-bottom: 1px solid #ede1e1;
 }
 .blog_right_text{
     padding-bottom: 10px;
+    line-height: 2;
+    font-size: 12px;
+}
+.section_blog h2{
+    font-size: 35px;
+    text-transform: capitalize;
+    line-height: 2;
+}
+.section_news{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
+    background-color: #f7f5f5;;
+    margin: 5px 0px 30px 0px;
+    flex-direction: column;
+}
+.container_form{
+    padding: 20px 0px;
+}
+.new_input{
+    width: 800px;
+    padding: 20px 29px;
+    outline: none;
+    /* border: none; */
+    border: 1px solid grey;
+}
+
+.news_btn{
+    padding: 16px 29px;
+    font-size:20px;
+    background-color: black;
+    color: white;
+    border: none;
+    outline: none;
+}
+
+.section_footer{
+ height: 400px;
+ width: 80%;
+ margin: auto;
+}
+.container_footer{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.container_footer p{
+    padding: 10px 0px;
+    color: gray;
+}
+.insta_1,.insta_2{
+    margin: 10px 10px;
+}
+.insta_1,.insta_2{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.insta_1_div,.insta_2_div{
+    width: 86px;
+    height: 79px;
+    background-color: gray;
+    margin: 0px 15px;
 }
